homeのページ作成

--- a/for_youth.html
+++ b/for_youth.html
@@ -26,18 +26,27 @@
 						<p>インタビューを三本掲載</p>
 					</div>
 					<article>
-						<hr>
+						<hr noshade size="7" color="#000">
 						<div class="interview">
-							<img src="" alt="">
-							<h6>EYESCCREME元編集長</h6>
+							<div class="taidan">
+								<img src="" alt="">
+							</div>
+							<h6>'EYESCREME'元編集長 髙田延彦</h6>
+							<h5>「ファッションとはなんなのか」</h5>
 						</div>
 						<div class="interview">
-							<img src="" alt="">
-							<h6></h6>
+							<div class="taidan">
+								<img src="" alt="">
+							</div>
+							<h6>野口千紘</h6>
+							<h5>「ルノアールの深夜料金について」</h5>
 						</div>
 						<div class="interview">
-							<img src="" alt="">
-							<h6></h6>
+							<div class="taidan">
+								<img src="" alt="">
+							</div>
+							<h6>干場きよひと</h6>
+							<h5>「新しい動画の考え方」</h5>
 						</div>
 					</article>
 				</div>
