--- a/for_youth.html
+++ b/for_youth.html
@@ -7,6 +7,7 @@
 		<title>Uni-Share vol.13</title>
 
 		<link rel="stylesheet" type="text/css" href="css/youth.css">
+		<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet">
 
 		<script src="js/main.js"></script>
 	</head>
@@ -51,6 +52,19 @@
 					</article>
 				</div>
 			</main>
+
+			<div class="sns">
+				<div class="container">
+						<a href=""><div class="twitter icon"><i class="fa fa-twitter" aria-hidden="true"></i></div></a>
+						<a href=""><div class="instagram icon"><i class="fa fa-instagram" aria-hidden="true"></i></div></a>
+						<a href=""><div class="facebook icon"><i class="fa fa-facebook" aria-hidden="true"></i></div></a>
+				</div>
+			</div>
+
+			<div class="link">
+				<div class="con"></div>
+				<div class="con"></div>
+			</div>
 
 			<footer>
 				<hr>
