演じないの画像

--- a/enjinai.html
+++ b/enjinai.html
@@ -18,7 +18,8 @@
 						<h3>Special Contents</h3>
 						<hr noshade size="1" color="#000">
 						<h1><img src="img/enzinailogo.png"></h1>
-						<div class="person">
+
+						<div class="person p1">
 							<div class="image"></div>
 							<div class="text">
 								<h5>vol.1</h5>
@@ -26,7 +27,7 @@
 								<p>Onodera Ryo</p>
 							</div>
 						</div>
-						<div class="person">
+						<div class="person p2">
 							<div class="image"></div>
 							<div class="text">
 								<h5>vo.2</h5>
@@ -34,7 +35,7 @@
 								<p></p>
 							</div>
 						</div>
-						<div class="person">
+						<div class="person p3">
 							<div class="image"></div>
 							<div class="text">
 								<h5>vo.3</h5>
@@ -42,7 +43,7 @@
 								<p></p>
 							</div>
 						</div>
-						<div class="person">
+						<div class="person p4">
 							<div class="image"></div>
 							<div class="text">
 								<h5>vo.4</h5>
@@ -50,7 +51,7 @@
 								<p></p>
 							</div>
 						</div>
-						<div class="person">
+						<div class="person p5">
 							<div class="image"></div>
 							<div class="text">
 								<h5>vol.5</h5>
