大量のアップデート

--- a/enjinai.html
+++ b/enjinai.html
@@ -23,7 +23,7 @@
 							<div class="image"></div>
 							<div class="text">
 								<h5>vol.1</h5>
-								<h4>小野寺 亮　×　野口 千紘</h4>
+								<h4>木竜 麻生　×　小野寺 亮</h4>
 								<p>Onodera Ryo</p>
 							</div>
 						</div>
@@ -31,7 +31,7 @@
 							<div class="image"></div>
 							<div class="text">
 								<h5>vo.2</h5>
-								<h4></h4>
+								<h4>潮 みか　×　小野寺 亮</h4>
 								<p></p>
 							</div>
 						</div>
@@ -39,7 +39,7 @@
 							<div class="image"></div>
 							<div class="text">
 								<h5>vo.3</h5>
-								<h4></h4>
+								<h4>井端 珠里　×　小野寺 亮</h4>
 								<p></p>
 							</div>
 						</div>
@@ -47,7 +47,7 @@
 							<div class="image"></div>
 							<div class="text">
 								<h5>vo.4</h5>
-								<h4></h4>
+								<h4>森 優作　×　小野寺 亮</h4>
 								<p></p>
 							</div>
 						</div>
@@ -55,7 +55,7 @@
 							<div class="image"></div>
 							<div class="text">
 								<h5>vol.5</h5>
-								<h4></h4>
+								<h4>小野寺 亮　×　小野寺 亮　×　小野寺 亮</h4>
 								<p></p>
 							</div>
 						</div>
@@ -66,9 +66,18 @@
 			<footer>
 				<hr>
 				<div class="container">
+					<h4><a href="#uni">TOP</a></h4>
+					<div class="sns">
+						<p>FOLLOW Uni-Share</p>
+						<a href=""><div class="twitter icon"><i class="fa fa-twitter" aria-hidden="true"></i></div></a>
+						<a href=""><div class="instagram icon"><i class="fa fa-instagram" aria-hidden="true"></i></div></a>
+						<a href=""><div class="facebook icon"><i class="fa fa-facebook" aria-hidden="true"></i></div></a>
+					</div>
+
 					<p><small>copyright <span id="c">©</span> Uni-Share. All rights reserved. website by Chihiro Noguchi</small></p>
 				</div>
 			</footer>
+			
 		</div><!-- /wrapper -->
 	</body>
 	</html>	
