--- a/for_youth.html
+++ b/for_youth.html
@@ -23,8 +23,15 @@
 			<main>
 				<div class="container">
 					<div class="concept">
-						<h4>若者から若者へ</h4>
-						<p>インタビューを三本掲載</p>
+						<h4 id="wakamono">若者から、若者へ</h4>
+						<h4>そして<br>
+							大人から若者へ
+						</h4>
+						<p>今回のUni-Share vol.13号では若者から若者へ声を届けるという<br>
+							企画を立ち上げ、若者の声を代弁した。<br><br>
+							このWebでのタイアップでは、大人から若者へをテーマに、<br>
+							三人の大人からの声を届ける。
+						</p>
 					</div>
 					<article>
 						<hr noshade size="7" color="#000">
@@ -32,8 +39,8 @@
 							<div class="taidan">
 								<img src="" alt="">
 							</div>
-							<h6>'EYESCREME'元編集長 髙田延彦</h6>
-							<h5>「ファッションとはなんなのか」</h5>
+							<h6><a href="">'EYESCREME'元編集長 髙田延彦</a></h6>
+							<h5><a href="">「ファッションとはなんなのか」</a></h5>
 						</div>
 						<div class="interview">
 							<div class="taidan">
@@ -53,14 +60,6 @@
 				</div>
 			</main>
 
-			<div class="sns">
-				<div class="container">
-						<a href=""><div class="twitter icon"><i class="fa fa-twitter" aria-hidden="true"></i></div></a>
-						<a href=""><div class="instagram icon"><i class="fa fa-instagram" aria-hidden="true"></i></div></a>
-						<a href=""><div class="facebook icon"><i class="fa fa-facebook" aria-hidden="true"></i></div></a>
-				</div>
-			</div>
-
 			<div class="link">
 				<div class="con"></div>
 				<div class="con"></div>
@@ -69,9 +68,18 @@
 			<footer>
 				<hr>
 				<div class="container">
+					<h4><a href="#uni">TOP</a></h4>
+					<div class="sns">
+						<p>FOLLOW Uni-Share</p>
+						<a href=""><div class="twitter icon"><i class="fa fa-twitter" aria-hidden="true"></i></div></a>
+						<a href=""><div class="instagram icon"><i class="fa fa-instagram" aria-hidden="true"></i></div></a>
+						<a href=""><div class="facebook icon"><i class="fa fa-facebook" aria-hidden="true"></i></div></a>
+					</div>
+
 					<p><small>copyright <span id="c">©</span> Uni-Share. All rights reserved. website by Chihiro Noguchi</small></p>
 				</div>
 			</footer>
+
 		</div><!-- /wrapper -->
 	</body>
 	</html>	
