--- a/the_home.html
+++ b/the_home.html
@@ -153,9 +153,18 @@
 			<footer>
 				<hr>
 				<div class="container">
+					<h4><a href="#uni">TOP</a></h4>
+					<div class="sns">
+						<p>FOLLOW Uni-Share</p>
+						<a href=""><div class="twitter icon"><i class="fa fa-twitter" aria-hidden="true"></i></div></a>
+						<a href=""><div class="instagram icon"><i class="fa fa-instagram" aria-hidden="true"></i></div></a>
+						<a href=""><div class="facebook icon"><i class="fa fa-facebook" aria-hidden="true"></i></div></a>
+					</div>
+
 					<p><small>copyright <span id="c">©</span> Uni-Share. All rights reserved. website by Chihiro Noguchi</small></p>
 				</div>
 			</footer>
+			
 		</div><!-- /wrapper -->
 	</body>
 	</html>	
