トップのナビゲーションを変更

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		<div class="wrapper">
 			<header id="header" class="">
 				<nav>
-					<h3 id="uni">Uni</h3>
+					<h3 id="uni"><img src="./img/uni_share_logo.png" alt=""></h3>
 					<ul>
 						<li><a href="#mag">Magazine</a></li>
 						<li><a href="#cov">Cover</a></li>
