youth部分の変更

--- a/for_youth.html
+++ b/for_youth.html
@@ -14,27 +14,26 @@
 	<body>
 		<div class="wrapper">
 			<nav>
-				<h3>Uni-Share</h3>
+				<h3><img src="./img/uni_share_logo.png" width="75" alt=""></h3>
 			</nav>
 			<header id="header" class="">
 				<div class="main-visual"><h1>" for youth, from youth "</h1></div>
 			</header><!-- /header -->
 
 			<main>
-				<div class="container">
-					<div class="concept">
-						<h4 id="wakamono">若者から、若者へ</h4>
-						<h4>そして<br>
-							大人から若者へ
-						</h4>
-						<p>今回のUni-Share vol.13号では若者から若者へ声を届けるという<br>
-							企画を立ち上げ、若者の声を代弁した。<br><br>
-							このWebでのタイアップでは、大人から若者へをテーマに、<br>
-							三人の大人からの声を届ける。
-						</p>
+				<div class="concept">
+					<h4 id="wakamono">若者から、若者へ</h4>
+					<h4>そして<br>
+						大人から若者へ
+					</h4>
+					<p>今回のUni-Share vol.13号では若者から若者へ声を届けるという<br>
+						企画を立ち上げ、若者の声を代弁した。<br><br>
+						このWebでのタイアップでは、大人から若者へをテーマに、<br>
+						三人の大人からの声を届ける。
+					</p>
 					</div>
+				<div class="container">
 					<article>
-						<hr noshade size="7" color="#000">
 						<div class="interview">
 							<div class="taidan">
 								<img src="" alt="">
@@ -46,15 +45,15 @@
 							<div class="taidan">
 								<img src="" alt="">
 							</div>
-							<h6>野口千紘</h6>
-							<h5>「ルノアールの深夜料金について」</h5>
+							<h6><a href="">'EYESCREME'元編集長 髙田延彦</a></h6>
+							<h5><a href="">「ファッションとはなんなのか」</a></h5>
 						</div>
 						<div class="interview">
 							<div class="taidan">
 								<img src="" alt="">
 							</div>
-							<h6>干場きよひと</h6>
-							<h5>「新しい動画の考え方」</h5>
+							<h6><a href="">'EYESCREME'元編集長 髙田延彦</a></h6>
+							<h5><a href="">「ファッションとはなんなのか」</a></h5>
 						</div>
 					</article>
 				</div>
@@ -68,7 +67,6 @@
 			<footer>
 				<hr>
 				<div class="container">
-					<h4><a href="#uni">TOP</a></h4>
 					<div class="sns">
 						<p>FOLLOW Uni-Share</p>
 						<a href=""><div class="twitter icon"><i class="fa fa-twitter" aria-hidden="true"></i></div></a>
