--- a/enjinai.html
+++ b/enjinai.html
@@ -7,6 +7,7 @@
 		<title>Uni-Share vol.13</title>
 
 		<link rel="stylesheet" type="text/css" href="css/enjinai.css">
+		<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet">
 
 		<script src="js/main.js"></script>
 	</head>
