youthのレイアウトを大幅に変更

--- a/for_youth.html
+++ b/for_youth.html
@@ -5,79 +5,32 @@
 		<meta name="author" content="chanchi-">
 		<meta name="description" content="ファッション雑誌であるUni-Shareの第13号ソノ声" >
 		<title>Uni-Share vol.13</title>
-
 		<link rel="stylesheet" type="text/css" href="css/youth.css">
 		<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet">
-
 		<script src="js/main.js"></script>
 	</head>
+
 	<body>
 		<div class="wrapper">
 			<nav>
 				<h3><img src="./img/uni_share_logo.png" width="75" alt=""></h3>
 			</nav>
-			<header id="header" class="">
-				<div class="main-visual"><h1>" for youth, from youth "</h1></div>
-			</header><!-- /header -->
-
 			<main>
-				<div class="concept">
-					<h4 id="wakamono">若者から、若者へ</h4>
-					<h4>そして<br>
-						大人から若者へ
-					</h4>
-					<p>今回のUni-Share vol.13号では若者から若者へ声を届けるという<br>
-						企画を立ち上げ、若者の声を代弁した。<br><br>
-						このWebでのタイアップでは、大人から若者へをテーマに、<br>
-						三人の大人からの声を届ける。
-					</p>
+				<div class="top">
+					<div class="title-text">
+						<h1>For Youth , From Youth</h1>
 					</div>
-				<div class="container">
-					<article>
-						<div class="interview">
-							<div class="taidan">
-								<img src="" alt="">
-							</div>
-							<h6><a href="">'EYESCREME'元編集長 髙田延彦</a></h6>
-							<h5><a href="">「ファッションとはなんなのか」</a></h5>
-						</div>
-						<div class="interview">
-							<div class="taidan">
-								<img src="" alt="">
-							</div>
-							<h6><a href="">'EYESCREME'元編集長 髙田延彦</a></h6>
-							<h5><a href="">「ファッションとはなんなのか」</a></h5>
-						</div>
-						<div class="interview">
-							<div class="taidan">
-								<img src="" alt="">
-							</div>
-							<h6><a href="">'EYESCREME'元編集長 髙田延彦</a></h6>
-							<h5><a href="">「ファッションとはなんなのか」</a></h5>
-						</div>
-					</article>
+				</div>
+				<div class="eye">
+					<div class="sub-text eye-text"></div>
+				</div>
+				<div class="stylist">
+					<div class="sub-text sty-text"></div>
+				</div>
+				<div class="dareka">
+					<div class="sub-text dareka-text"></div>
 				</div>
 			</main>
-
-			<div class="link">
-				<div class="con"></div>
-				<div class="con"></div>
-			</div>
-
-			<footer>
-				<hr>
-				<div class="container">
-					<div class="sns">
-						<p>FOLLOW Uni-Share</p>
-						<a href=""><div class="twitter icon"><i class="fa fa-twitter" aria-hidden="true"></i></div></a>
-						<a href=""><div class="instagram icon"><i class="fa fa-instagram" aria-hidden="true"></i></div></a>
-						<a href=""><div class="facebook icon"><i class="fa fa-facebook" aria-hidden="true"></i></div></a>
-					</div>
-
-					<p><small>copyright <span id="c">©</span> Uni-Share. All rights reserved. website by Chihiro Noguchi</small></p>
-				</div>
-			</footer>
-
 		</div><!-- /wrapper -->
 	</body>
 	</html>	
