演じないの調整

--- a/enjinai.html
+++ b/enjinai.html
@@ -13,6 +13,9 @@
 	</head>
 	<body>
 		<div class="wrapper">
+			<nav>
+				<h3><img src="./img/uni_share_logo.png" width="75" alt=""></h3>
+			</nav>
 			<main>
 				<div class="container">
 					<article>
