--- a/for_youth.html
+++ b/for_youth.html
@@ -34,13 +34,17 @@
 					</div>
 				</div>
 				<div class="stylist">
-					<div class="sub-text sty-text">
+					<div class="sub-text eye-text">
+						<h1>元編集長！</h1>
 						<h2><a href="#">View more</a></h2>
+						<p>昼はセキュリティー企業でエンジニアとして働く一方、夜はオンラインで犯罪行為に手を染める人々を懲らしめて過ごす天才ハッカー・エリオットは、ひょんなことから世界を牛耳る巨大テック企業「E・コープ」を破壊するための大掛かりな陰謀を手伝うことになる……ウェブ世界の暗黒面から現代社会の病理を鋭くえぐり取った戦慄のドラマ「MR.ROBOT / ミスター・ロボット」。海外ドラマ専門チャンネルAXNでの放送開始（第1話は無料放送！）に寄せて、デザインシンカー池田純一が、その魅力を明かす。</p>
 					</div>
 				</div>
 				<div class="dareka">
-					<div class="sub-text dareka-text">
+					<div class="sub-text eye-text">
+						<h1>元編集長！</h1>
 						<h2><a href="#">View more</a></h2>
+						<p>昼はセキュリティー企業でエンジニアとして働く一方、夜はオンラインで犯罪行為に手を染める人々を懲らしめて過ごす天才ハッカー・エリオットは、ひょんなことから世界を牛耳る巨大テック企業「E・コープ」を破壊するための大掛かりな陰謀を手伝うことになる……ウェブ世界の暗黒面から現代社会の病理を鋭くえぐり取った戦慄のドラマ「MR.ROBOT / ミスター・ロボット」。海外ドラマ専門チャンネルAXNでの放送開始（第1話は無料放送！）に寄せて、デザインシンカー池田純一が、その魅力を明かす。</p>
 					</div>
 				</div>
 			</main>
