--- a/for_youth.html
+++ b/for_youth.html
@@ -7,16 +7,64 @@
 		<title>Uni-Share vol.13</title>
 		<link rel="stylesheet" type="text/css" href="css/youth.css">
 		<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet">
-		<script src="js/main.js"></script>
+		<script src="js/jquery-3.1.1.min.js"></script>
+		<script src="js/jquery-ui-1.10.3.custom.min.js"></script>
+		<script src="js/dist/js/smooth-scroll.js"></script>
+		<script src="js/youth.js"></script>
+		<script src="js/nav.js"></script>
 	</head>
 
 	<body>
 		<div class="wrapper">
 			<nav>
 				<h3><img src="./img/uni_share_logo.png" width="75" alt=""></h3>
+				<div class="ham">
+					<div class="line line1"></div>
+					<div class="line line2"></div>
+					<div class="line line3"></div>
+					<div class="line line4"></div>
+				</div>
 			</nav>
-			<main>
-				<div class="top">
+
+			<div class="g-nav">
+				<div class="nav-con">
+					<ul>
+						<li><a href="index.html" id="top">Top</a></li>
+						<li><a href="for_youth.html" id="youth">For youth, From youth</a></li>
+						<li><a href="the_home.html" id="home">The home</a></li>
+						<li><a href="enjinai.html" id="enjinai">Enjinai</a></li>
+					</ul>
+					<div class="nav-img">
+						<div class="nav-slide">
+							<img src="img/home_cat.jpg" alt="" id="ichimaime">
+							<img src="img/home_hodou.jpg" alt="" id="nimaime">
+							<img src="img/home_main.jpg" alt="" id="sanmaime">
+							<img src="img/home_cat.jpg" alt="" id="yonmaime">
+						</div>
+					</div>
+				</div>
+
+				<footer>
+					<hr>
+					<div class="container">
+						<div class="sns">
+							<p id="follow">follow <br>Uni-Share</p>
+							<a href=""><div class="twitter icon"><i class="fa fa-twitter" aria-hidden="true"></i></div></a>
+							<a href=""><div class="instagram icon"><i class="fa fa-instagram" aria-hidden="true"></i></div></a>
+							<a href=""><div class="facebook icon"><i class="fa fa-facebook" aria-hidden="true"></i></div></a>
+						</div>
+						<p id="copy"><small>copyright <span id="c">©</span> Uni-Share. All rights reserved. website by Chihiro Noguchi</small></p>
+					</div>
+				</footer>
+			</div>
+			
+			<div class="loop">
+				<div class="l-bar" id="l-btn">◁</div>
+				<div class="r-bar" id="r-btn">▷</div>
+			</div>
+
+			<main id="main">
+				<div class="top slides" id="top">
 					<div class="title-text">
 						<h1>For Youth , From Youth</h1>
 						<h2>未知の仕組みを発見し、<br>
@@ -26,21 +74,21 @@
 						</h2>
 					</div>
 				</div>
-				<div class="eye">
+				<div class="eye slides" id="second">
 					<div class="sub-text eye-text">
 						<h1>元編集長！</h1>
 						<h2><a href="#">View more</a></h2>
 						<p>昼はセキュリティー企業でエンジニアとして働く一方、夜はオンラインで犯罪行為に手を染める人々を懲らしめて過ごす天才ハッカー・エリオットは、ひょんなことから世界を牛耳る巨大テック企業「E・コープ」を破壊するための大掛かりな陰謀を手伝うことになる……ウェブ世界の暗黒面から現代社会の病理を鋭くえぐり取った戦慄のドラマ「MR.ROBOT / ミスター・ロボット」。海外ドラマ専門チャンネルAXNでの放送開始（第1話は無料放送！）に寄せて、デザインシンカー池田純一が、その魅力を明かす。</p>
 					</div>
 				</div>
-				<div class="stylist">
+				<div class="stylist slides" id="third">
 					<div class="sub-text eye-text">
 						<h1>元編集長！</h1>
 						<h2><a href="#">View more</a></h2>
 						<p>昼はセキュリティー企業でエンジニアとして働く一方、夜はオンラインで犯罪行為に手を染める人々を懲らしめて過ごす天才ハッカー・エリオットは、ひょんなことから世界を牛耳る巨大テック企業「E・コープ」を破壊するための大掛かりな陰謀を手伝うことになる……ウェブ世界の暗黒面から現代社会の病理を鋭くえぐり取った戦慄のドラマ「MR.ROBOT / ミスター・ロボット」。海外ドラマ専門チャンネルAXNでの放送開始（第1話は無料放送！）に寄せて、デザインシンカー池田純一が、その魅力を明かす。</p>
 					</div>
 				</div>
-				<div class="dareka">
+				<div class="dareka slides" id="fourth">
 					<div class="sub-text eye-text">
 						<h1>元編集長！</h1>
 						<h2><a href="#">View more</a></h2>
