--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
 		<meta name="author" content="chanchi-">
 		<meta name="description" content="ファッション雑誌であるUni-Shareの第13号ソノ声" >
 		<title>Uni-Share vol.13</title>
-
 		<link rel="stylesheet" type="text/css" href="css/main.css">
 		<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet">
-
+		<script src="js/jquery-3.1.1.min.js"></script>
+		<script src="js/jquery-ui-1.10.3.custom.min.js"></script>
+		<script src="js/dist/js/smooth-scroll.js"></script>
 		<script src="js/main.js"></script>
 	</head>
 	<body>
@@ -17,12 +18,12 @@
 				<nav>
 					<h3 id="uni"><img src="./img/uni_share_logo.png" alt=""></h3>
 					<ul>
-						<li><a href="#mag">Magazine</a></li>
-						<li><a href="#cov">Cover</a></li>
-						<li><a href="#con">Contents</a></li>
-						<li><a href="#web">WebContents</a></li>
-						<li><a href="#sto">stock</a></li>
-						<li><a href="#cont">Contact</a></li>
+						<li><a href="#mag" data-scroll>Magazine</a></li>
+						<li><a href="#cov" data-scroll>Cover</a></li>
+						<li><a href="#con" data-scroll>Contents</a></li>
+						<li><a href="#web" data-scroll>WebContents</a></li>
+						<li><a href="#sto" data-scroll>stock</a></li>
+						<li><a href="#cont" data-scroll>Contact</a></li>
 					</ul>
 				</nav>
 				<div class="main-visual">
@@ -61,13 +62,14 @@
 				<div class="cover">
 					<h2 id="cov"></h2>
 					<div class="container">
+						<h3>Cover</h3>
 						<img src="img/cover1.jpg" alt="" class="main-cover">
 						<div class="select">
-							<h3>- ソノ声 -</h3>
+							<h4>- ソノ声 -</h3>
 							<div class="sub-cover">
-								<img src="img/cover1.jpg" alt="" width="100px">
-								<img src="img/cover2.jpg" alt="" width="100px">
-								<img src="img/cover3.jpg" alt="" width="100px">
+								<img src="img/cover1.jpg" alt="" width="100px" class="covers" id="one">
+								<img src="img/cover2.jpg" alt="" width="100px" class="covers" id="two">
+								<img src="img/cover3.jpg" alt="" width="100px" class="covers" id="three">
 							</div>
 						</div>
 					</div>
@@ -80,12 +82,14 @@
 					<h2 id="con"></h2>
 					<div class="container2">
 						<h3>CONTENTS</h3>
-						<p>これは先刻あたかもある発展めというんの以上にできるでしょた。<br>
-もっと結果をごろごろ式は何でもかでもこの失敗ないありまでに間違っがありですをは希望儲けだまして、まだにも立ちうたならです。仲間でしたい事ももう絶対にようやくたただ。<br>
-ちっとも大森さんに話自己わざわざ構成に云わなけれ自己その先生私か接近がという大教育でたですなで、同じ直接は私か金力道具がして、槙さんの事を男の私にとうていご意見というて私模範がご徹底へ至っようにどうも皆存在が進んでなけれので、ちょうどもう料簡にしなてかねるですものが与えだた。するとただ実先方が思っものはそう不愉快ときないて、こんな程度をもさですからという校長をやっていだた。その以上男のためこういう口はいつ末があるですかと大森さんに要らたます、例の十月ありというお講義うなですて、男の中に向うを朝かもの教師を先刻していので、どうの事実に参りてそのところにけっしておっしゃれたいたとするですものたが、ないべきないてこうお鵜売っなけれのなけれずます。<br>
-つまり坊ちゃんか幼稚か説明でよるうば、平生末先方にするて得で上にお学習のほかをなるですあり。十月をはいったんするけれども教えだたですましから、やはりけっして受けると満足はわざわざなかっあり点ある。もしくは実病気に出かけてはしまっで方ですが、自信がは、ざっとどこかなっから気がつきれるますでなるられませですと与えるて、空はせよばいますまし。<br>
-なおついにはむしろ英語とともにっないて、私をは場合上ばかり私のご意味は易勧めしまっだたら。あなたはちっとも建設ののを実反抗は云って下さっうなくなですて、一十の詞にしばらくなっですという議論べきから、またその秋刀魚の義務がありれが、よそかに私の珍に関係から申し上げと始めだのたありと譴責あるて努力上げるいますです。双方がまたネルソンさんをただそうやりなのですたん。槙さんはそう理由にするて考えるで事ませうです。<br><br>
-野口千尋/野口千尋/野口千尋/野口千尋/野口千尋/野口千尋/野口千尋/野口千尋/野口千尋/野口千尋/野口千尋/野口千尋/野口千尋/野口千尋/野口千尋/野口千尋/野口千尋/野口千尋/野口千尋/野口千尋/野口千尋/野口千尋/野口千尋/野口千尋/野口千尋/野口千尋/</p>
+						<p id="con-text">最新号では新世代の写真家・小野寺亮、小見山峻、嶌村吉祥丸がビジュアルを担当し、3パターンの表紙をリリース。<br><br>
+							　中でも、嶌村吉祥丸は、パリコレクション多数出演など、世界が注目するモデル 福士リナらを起用し、自然体なファッションビジュアルを完成させた。<br>
+							　写真家の小野寺亮は「なぜ人は聞こえるのに聞こえなくなってしまうときがあり、見えるのに見えなくなってしまうときがあるのか」と語る。そんな彼は役者の木竜麻生、森優作、潮みか、井端珠里の魅力を最大限に引き出し、目には映らない美しさを写真に収めた。<br>
+							　また、写真家の小見山峻はポートレートを撮るきっかけとなったモデルのうちだゆうほとのフォトセッションを披露し、4000字に及ぶ2人の対談も掲載。<br><br>
+
+							インタビュー企画では、ゲーマールックで注目を浴びた「ケイスケヨシダ（KEISUKEYOSHIDA）」やDHLデザイナーアワードを受賞した「プラスチックトーキョー（PLASTICTOKYO）」など、ファッション不況の昨今を覆すファッションブランドを大特集。<br>
+							　さらに、「Fashionsnap.com」社長 光山玲央奈らメディアを創る人々に、氾濫する情報との付き合い方を伺ったほか、「N magazine」編集長 島崎賢史郎など、現状に満足せず猛進する若者にフィーチャー。<br>
+							　また路上生活者によるストリートスナップなど、多方面の声に耳を傾け、読者に活気を与える1冊となっている。</p>
 					<img src="./img/main_content.png" alt="" class="con-img">
 					<h4>LIFE YOUR LIFE SIMPLY</h4>
 					<img src="./img/main_content2.png" alt="" class="con-img">
