--- a/the_home.html
+++ b/the_home.html
@@ -8,14 +8,56 @@
 
 		<link rel="stylesheet" type="text/css" href="css/home.css">
 		<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet">
-
-		<script src="js/main.js"></script>
+		<script src="js/jquery-3.1.1.min.js"></script>
+		<script src="js/jquery-ui-1.10.3.custom.min.js"></script>
+		<script src="js/dist/js/smooth-scroll.js"></script>
+		<script src="js/nav.js"></script>
 	</head>
 	<body>
 		<div class="wrapper">
 			<nav>
-				<h3>Uni-Share</h3>
+				<h3><img src="./img/uni_share_logo.png" width="75" alt=""></h3>
+				<div class="ham">
+					<div class="line line1"></div>
+					<div class="line line2"></div>
+					<div class="line line3"></div>
+					<div class="line line4"></div>
+				</div>
 			</nav>
+
+			<div class="g-nav">
+				<div class="nav-con">
+					<ul>
+						<li><a href="index.html" id="top">Top</a></li>
+						<li><a href="for_youth.html" id="youth">For youth, From youth</a></li>
+						<li><a href="the_home.html" id="home">The home</a></li>
+						<li><a href="enjinai.html" id="enjinai">Enjinai</a></li>
+					</ul>
+					<div class="nav-img">
+						<div class="nav-slide">
+							<img src="img/home_cat.jpg" alt="" id="ichimaime">
+							<img src="img/home_hodou.jpg" alt="" id="nimaime">
+							<img src="img/home_main.jpg" alt="" id="sanmaime">
+							<img src="img/home_cat.jpg" alt="" id="yonmaime">
+						</div>
+					</div>
+				</div>
+
+				<footer>
+					<hr>
+					<div class="container">
+						<div class="sns">
+							<p id="follow">follow <br>Uni-Share</p>
+							<a href=""><div class="twitter icon"><i class="fa fa-twitter" aria-hidden="true"></i></div></a>
+							<a href=""><div class="instagram icon"><i class="fa fa-instagram" aria-hidden="true"></i></div></a>
+							<a href=""><div class="facebook icon"><i class="fa fa-facebook" aria-hidden="true"></i></div></a>
+						</div>
+						<p id="copy"><small>copyright <span id="c">©</span> Uni-Share. All rights reserved. website by Chihiro Noguchi</small></p>
+					</div>
+				</footer>
+			</div>
+			
+
 			<header id="header" class="">
 				<div class="main-visual">
 					<div class="img-home"></div>
@@ -146,7 +188,11 @@
 					</p>
 				</div>
 
-				<div class="image"></div>
+				<div class="image">
+					<img src="img/enjinai_kiryu.jpg" >
+					<p>撮影協力 : 新宿駅ホームレスのみなさま</p>
+				</div>
+
 			</main>
 
 			<div class="sns"></div>
@@ -156,7 +202,7 @@
 				<div class="container">
 					<h4><a href="#uni">TOP</a></h4>
 					<div class="sns">
-						<p>FOLLOW Uni-Share</p>
+						<p id="follow">follow <br>Uni-Share</p>
 						<a href=""><div class="twitter icon"><i class="fa fa-twitter" aria-hidden="true"></i></div></a>
 						<a href=""><div class="instagram icon"><i class="fa fa-instagram" aria-hidden="true"></i></div></a>
 						<a href=""><div class="facebook icon"><i class="fa fa-facebook" aria-hidden="true"></i></div></a>
