--- a/the_home.html
+++ b/the_home.html
@@ -4,10 +4,12 @@
 		<meta charset="UTF-8">
 		<meta name="author" content="chanchi-">
 		<meta name="description" content="ファッション雑誌であるUni-Shareの第13号ソノ声" >
+		<meta name="name" content="content">
 		<title>Uni-Share vol.13</title>
 
 		<link rel="stylesheet" type="text/css" href="css/home.css">
 		<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet">
+		<link rel="shortcut icon" href="img/simple_logo.png">
 		<script src="js/jquery-3.1.1.min.js"></script>
 		<script src="js/jquery-ui-1.10.3.custom.min.js"></script>
 		<script src="js/dist/js/smooth-scroll.js"></script>
