--- a/enjinai.html
+++ b/enjinai.html
@@ -7,12 +7,17 @@
 		<title>Uni-Share vol.13</title>
 		<link rel="stylesheet" type="text/css" href="css/enjinai.css">
 		<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet">
+		<link rel="shortcut icon" href="img/simple_logo.png">
 		<script src="js/jquery-3.1.1.min.js"></script>
 		<script src="js/jquery-ui-1.10.3.custom.min.js"></script>
 		<script src="js/dist/js/smooth-scroll.js"></script>
 		<script src="js/nav.js"></script>
 	</head>
 	<body>
+		<div class="start">
+			<img src="img/enzinai_main.png" alt="">
+			<p>演じない、それは演じないこと</p>
+		</div>
 		<div class="wrapper">
 			<nav>
 				<h3><img src="./img/uni_share_logo.png" width="75" alt=""></h3>
@@ -59,8 +64,6 @@
 			<main>
 				<div class="container">
 					<article>
-						<h3>Special Contents</h3>
-						<hr noshade size="1" color="#000">
 						<h1><img src="img/enzinailogo.png"></h1>
 
 						<div class="person p1">
@@ -112,7 +115,7 @@
 				<div class="container">
 					<h4><a href="#uni">TOP</a></h4>
 					<div class="sns">
-						<p>FOLLOW Uni-Share</p>
+						<p>follow <br> Uni-Share</p>
 						<a href=""><div class="twitter icon"><i class="fa fa-twitter" aria-hidden="true"></i></div></a>
 						<a href=""><div class="instagram icon"><i class="fa fa-instagram" aria-hidden="true"></i></div></a>
 						<a href=""><div class="facebook icon"><i class="fa fa-facebook" aria-hidden="true"></i></div></a>
