--- a/index.html
+++ b/index.html
@@ -61,16 +61,15 @@
 
 				<div class="cover">
 					<h2 id="cov"></h2>
-					<div class="container">
+					<div class="container2">
 						<h3>Cover</h3>
-						<img src="img/cover1.jpg" alt="" class="main-cover">
+						<div class="main-cover">
+							<img src="img/cover1.jpg" alt="" class="big-cover">
+						</div>
 						<div class="select">
-							<h4>- ソノ声 -</h3>
-							<div class="sub-cover">
 								<img src="img/cover1.jpg" alt="" width="100px" class="covers" id="one">
 								<img src="img/cover2.jpg" alt="" width="100px" class="covers" id="two">
 								<img src="img/cover3.jpg" alt="" width="100px" class="covers" id="three">
-							</div>
 						</div>
 					</div>
 				</div>
@@ -188,9 +187,9 @@
 			<footer>
 				<hr>
 				<div class="container">
-					<h4><a href="#uni">TOP</a></h4>
+					<h4><a href="#" data-scroll>TOP</a></h4>
 					<div class="sns">
-						<p>FOLLOW Uni-Share</p>
+						<p>follow <br> Uni-Share</p>
 						<a href=""><div class="twitter icon"><i class="fa fa-twitter" aria-hidden="true"></i></div></a>
 						<a href=""><div class="instagram icon"><i class="fa fa-instagram" aria-hidden="true"></i></div></a>
 						<a href=""><div class="facebook icon"><i class="fa fa-facebook" aria-hidden="true"></i></div></a>
