--- a/the_home.html
+++ b/the_home.html
@@ -204,7 +204,7 @@
 				<div class="container">
 					<h4><a href="#uni">TOP</a></h4>
 					<div class="sns">
-						<p id="follow">follow <br>Uni-Share</p>
+						<p>follow <br>Uni-Share</p>
 						<a href=""><div class="twitter icon"><i class="fa fa-twitter" aria-hidden="true"></i></div></a>
 						<a href=""><div class="instagram icon"><i class="fa fa-instagram" aria-hidden="true"></i></div></a>
 						<a href=""><div class="facebook icon"><i class="fa fa-facebook" aria-hidden="true"></i></div></a>
