rootナビゲーションの実行

--- a/enjinai.html
+++ b/enjinai.html
@@ -11,10 +11,12 @@
 		<script src="js/jquery-3.1.1.min.js"></script>
 		<script src="js/jquery-ui-1.10.3.custom.min.js"></script>
 		<script src="js/dist/js/smooth-scroll.js"></script>
+		<script src="js/enjinai.js"></script>
 		<script src="js/nav.js"></script>
 	</head>
 	<body>
 		<div class="start">
+			<div class="batu">×</div>
 			<img src="img/enzinai_main.png" alt="">
 			<p>演じない、それは演じないこと</p>
 		</div>
@@ -113,7 +115,6 @@
 			<footer>
 				<hr>
 				<div class="container">
-					<h4><a href="#uni">TOP</a></h4>
 					<div class="sns">
 						<p>follow <br> Uni-Share</p>
 						<a href=""><div class="twitter icon"><i class="fa fa-twitter" aria-hidden="true"></i></div></a>
