--- a/index.html
+++ b/index.html
@@ -22,14 +22,24 @@
 						<li><a href="#cov" data-scroll>Cover</a></li>
 						<li><a href="#con" data-scroll>Contents</a></li>
 						<li><a href="#web" data-scroll>WebContents</a></li>
-						<li><a href="#sto" data-scroll>stock</a></li>
+						<li><a href="#sto" data-scroll>Stock</a></li>
 						<li><a href="#cont" data-scroll>Contact</a></li>
 					</ul>
 				</nav>
 				<div class="main-visual">
-					<img src="img/cover1.jpg">
+					<img src="img/enjinai_mori.jpg">
 				</div>
 			</header><!-- /header -->
+
+			<div class="root-nav">
+				<div class="circles">
+					<div class="circle maru1"></div>
+					<div class="circle maru2"></div>
+					<div class="circle maru3"></div>
+					<div class="circle maru4"></div>
+					<div class="circle maru5"></div>
+				</div>
+			</div>
 
 			<main>
 				<div class="magazine">
