--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
 			<main>
 				<div class="magazine">
 					<h2 id="mag"></h2>
-					<div class="container"><span class="title">Uni-Share vol.13</span></div>
-					<h1>「 ソノ声 」</h1>
 					<div class="container">
+						<h1>「 ソノ声 」</h1>
+	
 						<p> 世の中に声は溢れていて、
 							僕らは関心がなく、それに気づけないのは、<br>
 							イヤホンから流れる耳触りの良い声を世の中だと信じているから。<br><br>
@@ -55,7 +55,7 @@
 							声が枯れるまで叫び続けている人の声が。
 							僕らが掻き消してしまった人の声が。<br><br>
 
-							何か変わりたいなら、耳を澄ましてみるといい。
+							何か変わりたいなら、耳を澄ましてみるといい。<br>
 							これまで聞こうとしていなかった声に気づくだろう。<br>
 							僕らの思っていた全ては全てではないのだということに気づくだろう。<br>
 							そして耳を澄ますだけでは物足りなく、声をあげるだろう。<br><br>
@@ -67,6 +67,7 @@
 							疑問を持て。ぼくらは立ち上がる。<br>
 						</p>
 					</div>
+					<div class="container2"><span class="title">Uni-Share_Vol.13_Oct.15.2016</span></div>
 				</div>
 
 				<div class="cover">
