画像の追加と詳細変更

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<div class="wrapper">
 			<header id="header" class="">
 				<nav>
-					<h3 id="uni"><img src="./img/uni_share_logo.png" alt=""></h3>
+					<h3 id="uni"><img src="./img/logo_white.png"></h3>
 					<ul>
 						<li><a href="#mag" data-scroll>Magazine</a></li>
 						<li><a href="#cov" data-scroll>Cover</a></li>
@@ -27,7 +27,7 @@
 					</ul>
 				</nav>
 				<div class="main-visual">
-					<img src="img/enjinai_mori.jpg">
+					<img src="img/main_hero.JPG">
 				</div>
 			</header><!-- /header -->
 
@@ -72,15 +72,14 @@
 
 				<div class="cover">
 					<h2 id="cov"></h2>
-					<div class="container2">
-						<h3>Cover</h3>
+					<div class="container">
 						<div class="main-cover">
-							<img src="img/cover1.jpg" alt="" class="big-cover">
+							<img src="img/cover_kissho.png" class="big-cover">
 						</div>
 						<div class="select">
-								<img src="img/cover1.jpg" alt="" width="100px" class="covers" id="one">
-								<img src="img/cover2.jpg" alt="" width="100px" class="covers" id="two">
-								<img src="img/cover3.jpg" alt="" width="100px" class="covers" id="three">
+								<img src="img/cover_onodera.png"  class="covers" id="one">
+								<img src="img/cover_komiyama.png" class="covers" id="two">
+								<img src="img/cover_kissho.png"  class="covers" id="three">
 						</div>
 					</div>
 				</div>
@@ -93,17 +92,17 @@
 					<div class="container2">
 						<h3>CONTENTS</h3>
 						<p id="con-text">最新号では新世代の写真家・小野寺亮、小見山峻、嶌村吉祥丸がビジュアルを担当し、3パターンの表紙をリリース。<br><br>
-							　中でも、嶌村吉祥丸は、パリコレクション多数出演など、世界が注目するモデル 福士リナらを起用し、自然体なファッションビジュアルを完成させた。<br>
-							　写真家の小野寺亮は「なぜ人は聞こえるのに聞こえなくなってしまうときがあり、見えるのに見えなくなってしまうときがあるのか」と語る。そんな彼は役者の木竜麻生、森優作、潮みか、井端珠里の魅力を最大限に引き出し、目には映らない美しさを写真に収めた。<br>
-							　また、写真家の小見山峻はポートレートを撮るきっかけとなったモデルのうちだゆうほとのフォトセッションを披露し、4000字に及ぶ2人の対談も掲載。<br><br>
+							　中でも、嶌村吉祥丸は、パリコレクション多数出演など、世界が注目するモデル 福士リナらを起用し、自然体なファッションビジュアルを完成させた。
+							写真家の小野寺亮は「なぜ人は聞こえるのに聞こえなくなってしまうときがあり、見えるのに見えなくなってしまうときがあるのか」と語る。そんな彼は役者の木竜麻生、森優作、潮みか、井端珠里の魅力を最大限に引き出し、目には映らない美しさを写真に収めた。
+							また、写真家の小見山峻はポートレートを撮るきっかけとなったモデルのうちだゆうほとのフォトセッションを披露し、4000字に及ぶ2人の対談も掲載。<br><br>
 
-							インタビュー企画では、ゲーマールックで注目を浴びた「ケイスケヨシダ（KEISUKEYOSHIDA）」やDHLデザイナーアワードを受賞した「プラスチックトーキョー（PLASTICTOKYO）」など、ファッション不況の昨今を覆すファッションブランドを大特集。<br>
-							　さらに、「Fashionsnap.com」社長 光山玲央奈らメディアを創る人々に、氾濫する情報との付き合い方を伺ったほか、「N magazine」編集長 島崎賢史郎など、現状に満足せず猛進する若者にフィーチャー。<br>
+							　インタビュー企画では、ゲーマールックで注目を浴びた「ケイスケヨシダ（KEISUKEYOSHIDA）」やDHLデザイナーアワードを受賞した「プラスチックトーキョー（PLASTICTOKYO）」など、ファッション不況の昨今を覆すファッションブランドを大特集。<br><br>
+							　さらに、「Fashionsnap.com」社長 光山玲央奈らメディアを創る人々に、氾濫する情報との付き合い方を伺ったほか、「N magazine」編集長 島崎賢史郎など、現状に満足せず猛進する若者にフィーチャー。
 							　また路上生活者によるストリートスナップなど、多方面の声に耳を傾け、読者に活気を与える1冊となっている。</p>
 					<img src="./img/main_content.png" alt="" class="con-img">
-					<h4>LIFE YOUR LIFE SIMPLY</h4>
-					<img src="./img/main_content2.png" alt="" class="con-img">
-					<h4>CONCRETE MOON</h4>
+					<h4>LIVE YOUR LIFE SIMPLY</h4>
+					<img src="./img/main_keisuke.png" alt="" class="con-img">
+					<h4>VOICE OF FASHION</h4>
 					<img src="./img/main_content3.png" alt="" class="con-img">
 					<h4>THE HOME</h4>
 					</div>
@@ -111,7 +110,7 @@
 
 				<div class="webcontents">
 					<h2 id="web"></h2>
-					<div class="container">
+					<div class="container2">
 						<h3>WEB CONTENTS</h3>
 						<a href="for_youth.html"><div class="webmaga"><img src="" alt=""></div></a>
 						<a href="enjinai.html"><div class="webmaga"><img src="" alt=""></div></a>
@@ -125,7 +124,7 @@
 				<div class="stock">
 					<h2 id="sto"></h2>
 					<div class="container2">
-						<h3>Stock List</h3>
+						<h3>STOCK</h3>
 						<div class="left">
 							<h4>Special Thanks</h4>
 							<p>大盛堂書店<br>
@@ -206,7 +205,7 @@
 						<a href=""><div class="facebook icon"><i class="fa fa-facebook" aria-hidden="true"></i></div></a>
 					</div>
 
-					<p><small>copyright <span id="c">©</span> Uni-Share. All rights reserved. website by Chihiro Noguchi</small></p>
+					<p><br><small>copyright <span id="c">©</span>Uni-Share. All rights reserved. website by Chihiro Noguchi</small></p>
 				</div>
 			</footer>
 		</div><!-- /wrapper -->
