--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@
 
 			<div class="root-nav">
 				<div class="circles">
-					<div class="circle maru1"></div>
-					<div class="circle maru2"></div>
-					<div class="circle maru3"></div>
-					<div class="circle maru4"></div>
-					<div class="circle maru5"></div>
+					<a href="#mag" data-scroll><div class="circle maru1"></div></a>
+					<a href="#cov" data-scroll><div class="circle maru2"></div></a>
+					<a href="#con" data-scroll><div class="circle maru3"></div></a>
+					<a href="#web" data-scroll><div class="circle maru4"></div></a>
+					<a href="#sto" data-scroll><div class="circle maru5"></div></a>
 				</div>
 			</div>
 
@@ -112,12 +112,10 @@
 					<h2 id="web"></h2>
 					<div class="container2">
 						<h3>WEB CONTENTS</h3>
-						<a href="for_youth.html"><div class="webmaga"><img src="" alt=""></div></a>
-						<a href="enjinai.html"><div class="webmaga"><img src="" alt=""></div></a>
-						<a href="the_home.html"><div class="webmaga"><img src="" alt=""></div></a>
-						<a href="#"><div class="webmaga"><img src="" alt=""></div></a>
-						<a href="#"><div class="webmaga"><img src="" alt=""></div></a>
-						<a href="#"><div class="webmaga"><img src="" alt=""></div></a>
+						<a href="for_youth.html"><div class="webmaga"><img src="img/main_tile.png" alt=""></div></a>
+						<a href="enjinai.html"><div class="webmaga"><img src="img/main_tile2.png"></div></a>
+						<a href="the_home.html"><div class="webmaga"><img src="img/main_tile3.png"></div></a>
+						<a href="#"><div class="webmaga"><img src="img/main_tile4.png"></div></a>
 					</div>
 				</div>
 
