--- a/the_home.html
+++ b/the_home.html
@@ -18,7 +18,7 @@
 	<body>
 		<div class="wrapper">
 			<nav>
-				<h3><img src="./img/uni_share_logo.png" width="75" alt=""></h3>
+				<h3><a href="index.html"><img src="./img/logo_white.png" width="75" alt=""></a></h3>
 				<div class="ham">
 					<div class="line line1"></div>
 					<div class="line line2"></div>
@@ -65,9 +65,17 @@
 					<div class="img-home"></div>
 					<div class="text">
 						<h1>The Home</h1>
-						<h2>世の中に声は溢れていて、<br>
-							僕らは関心がなく、それに気づけないのは、<br>
-							イヤホンから流れる耳触りの良い声を世の中だと信じているから。
+<!-- 						<h2>彼らの声に耳を傾けたことがあるだろうか。<br>
+							彼らの目に何が映っているのか考えたことはあるだろうか。<br><br>
+
+							そんな姿勢は、そんな物言いは、傲慢なんだということを僕らは知っている。<br>
+							だけど、彼らの毎日を清貧なんだと思えるのだったら、<br>
+							彼らが見ている景色を見せてもらいたいと思った。<br><br>
+
+							「この写ルンですで自由に何か撮ってくれませんか」<br>
+							彼らに写ルンですを渡した。<br>
+							撮れる枚数は27枚、たったの、27枚。<br>
+							彼らから僕らへ。<br> -->
 						</h2>
 					</div>
 				</div>
@@ -75,24 +83,18 @@
 
 			<main>
 				<div class="msg">
-					<p> 世の中に声は溢れていて、<br>
-						僕らは関心がなく、それに気づけないのは、<br>
-						イヤホンから流れる耳触りの良い声を世の中だと信じているから。<br><br>
+					<p> 
+						彼らの声に耳を傾けたことがあるだろうか。<br>
+							彼らの目に何が映っているのか考えたことはあるだろうか。<br><br>
 
-						聞こえる人には聞こえている。<br>
-						声が枯れるまで叫び続けている人の声が。<br>
-						僕らが掻き消してしまった人の声が。<br><br>
+							そんな姿勢は、そんな物言いは、傲慢なんだということを僕らは知っている。<br>
+							だけど、彼らの毎日を清貧なんだと思えるのだったら、<br>
+							彼らが見ている景色を見せてもらいたいと思った。<br><br>
 
-						何か変わりたいなら、耳を澄ましてみるといい。<br>
-						これまで聞こうとしていなかった声に気づくだろう。<br>
-						僕らの思っていた全ては全てではないのだということに気づくだろう。<br>
-						そして耳を澄ますだけでは物足りなく、声をあげるだろう。<br><br>
-
-						その声は、ときに掻き消されてしまうかもしれないが、<br>
-						今の僕らには聞こえている。<br><br>
-
-						イヤホンで耳を塞いで、腰掛けていても何も始まらない。<br>
-						疑問を持て。ぼくらは立ち上がる。<br>
+							「この写ルンですで自由に何か撮ってくれませんか」<br><br>
+							彼らに写ルンですを渡した。<br>
+							撮れる枚数は27枚、たったの、27枚。<br>
+							彼らから僕らへ。<br>
 					</p>
 				</div>
 
@@ -204,9 +206,9 @@
 				<div class="container">
 					<div class="sns">
 						<p>follow <br>Uni-Share</p>
-						<a href=""><div class="twitter icon"><i class="fa fa-twitter" aria-hidden="true"></i></div></a>
-						<a href=""><div class="instagram icon"><i class="fa fa-instagram" aria-hidden="true"></i></div></a>
-						<a href=""><div class="facebook icon"><i class="fa fa-facebook" aria-hidden="true"></i></div></a>
+							<a href="https://twitter.com/uni_share" target="blank"><div class="twitter icon"><i class="fa fa-twitter" aria-hidden="true"></i></div></a>
+							<a href="https://www.instagram.com/uni_share/" target="blank"><div class="instagram icon"><i class="fa fa-instagram" aria-hidden="true"></i></div></a>
+							<a href="https://www.facebook.com/UniShare/?fref=ts" target="blank"><div class="facebook icon"><i class="fa fa-facebook" aria-hidden="true"></i></div></a>
 					</div>
 
 					<p><small>copyright <span id="c">©</span> Uni-Share. All rights reserved. website by Chihiro Noguchi</small></p>
