--- a/enjinai.html
+++ b/enjinai.html
@@ -18,11 +18,13 @@
 		<div class="start">
 			<div class="batu">×</div>
 			<img src="img/enzinai_main.png" alt="">
-			<p>演じない、それは演じないこと</p>
+			<p>写真家の小野寺亮は「なぜ人は聞こえるのに聞こえなくなってしまうときあり、<br>
+				見えるのに見えなくなってしまうときがあるのか」と語る。<br>
+				そして役者の木竜麻生、森優作、潮みか、井端珠里の魅力を最大限に引き出し、<br>目には映らない美しさを写真に収めた。</p>
 		</div>
 		<div class="wrapper">
 			<nav>
-				<h3><img src="./img/uni_share_logo.png" width="75" alt=""></h3>
+				<h3><a href="index.html"><img src="./img/uni_share_logo.png" width="75" alt=""></a></h3>
 				<div class="ham">
 					<div class="line line1"></div>
 					<div class="line line2"></div>
@@ -73,7 +75,7 @@
 							<div class="text">
 								<h5>vol.1</h5>
 								<h4>木竜 麻生　×　小野寺 亮</h4>
-								<p>Onodera Ryo</p>
+								<p>Mai Kiryu × Ryo Onodera</p>
 							</div>
 						</div>
 						<div class="person p2">
@@ -81,7 +83,7 @@
 							<div class="text">
 								<h5>vo.2</h5>
 								<h4>潮 みか　×　小野寺 亮</h4>
-								<p></p>
+								<p>Mika Ushio × Ryo Onodera</p>
 							</div>
 						</div>
 						<div class="person p3">
@@ -89,7 +91,7 @@
 							<div class="text">
 								<h5>vo.3</h5>
 								<h4>井端 珠里　×　小野寺 亮</h4>
-								<p></p>
+								<p>Juri Ihata × Ryo Onodera</p>
 							</div>
 						</div>
 						<div class="person p4">
@@ -97,15 +99,15 @@
 							<div class="text">
 								<h5>vo.4</h5>
 								<h4>森 優作　×　小野寺 亮</h4>
-								<p></p>
+								<p>Yusaku Mori × Ryo Onodera</p>
 							</div>
 						</div>
 						<div class="person p5">
 							<div class="image"></div>
 							<div class="text">
 								<h5>vol.5</h5>
-								<h4>小野寺 亮　×　小野寺 亮　×　小野寺 亮</h4>
-								<p></p>
+								<h4>松田 稜平　×　榎戸 悠乃　×　小野寺 亮</h4>
+								<p>Ryohei Matsuda × Hirono Enokido × Ryo Onodera</p>
 							</div>
 						</div>
 					</article>
@@ -117,9 +119,9 @@
 				<div class="container">
 					<div class="sns">
 						<p>follow <br> Uni-Share</p>
-						<a href=""><div class="twitter icon"><i class="fa fa-twitter" aria-hidden="true"></i></div></a>
-						<a href=""><div class="instagram icon"><i class="fa fa-instagram" aria-hidden="true"></i></div></a>
-						<a href=""><div class="facebook icon"><i class="fa fa-facebook" aria-hidden="true"></i></div></a>
+							<a href="https://twitter.com/uni_share" target="blank"><div class="twitter icon"><i class="fa fa-twitter" aria-hidden="true"></i></div></a>
+							<a href="https://www.instagram.com/uni_share/" target="blank"><div class="instagram icon"><i class="fa fa-instagram" aria-hidden="true"></i></div></a>
+							<a href="https://www.facebook.com/UniShare/?fref=ts" target="blank"><div class="facebook icon"><i class="fa fa-facebook" aria-hidden="true"></i></div></a>
 					</div>
 
 					<p><small>copyright <span id="c">©</span> Uni-Share. All rights reserved. website by Chihiro Noguchi</small></p>
