--- a/for_youth.html
+++ b/for_youth.html
@@ -17,7 +17,7 @@
 	<body>
 		<div class="wrapper">
 			<nav>
-				<h3><img src="./img/uni_share_logo.png" width="75" alt=""></h3>
+				<h3><a href="index.html"><img src="./img/uni_share_logo.png" width="75" alt=""><a/></h3>
 				<div class="ham">
 					<div class="line line1"></div>
 					<div class="line line2"></div>
@@ -36,10 +36,10 @@
 					</ul>
 					<div class="nav-img">
 						<div class="nav-slide">
-							<img src="img/home_cat.jpg" alt="" id="ichimaime">
-							<img src="img/home_hodou.jpg" alt="" id="nimaime">
+							<img src="img/main_hero.JPG" alt="" id="ichimaime">
+							<img src="img/youth_hattori.jpg" id="nimaime">
 							<img src="img/home_main.jpg" alt="" id="sanmaime">
-							<img src="img/home_cat.jpg" alt="" id="yonmaime">
+							<img src="img/enjinai_mori.jpg" id="yonmaime">
 						</div>
 					</div>
 				</div>
@@ -49,52 +49,51 @@
 					<div class="container">
 						<div class="sns">
 							<p id="follow">follow <br>Uni-Share</p>
-							<a href=""><div class="twitter icon"><i class="fa fa-twitter" aria-hidden="true"></i></div></a>
-							<a href=""><div class="instagram icon"><i class="fa fa-instagram" aria-hidden="true"></i></div></a>
-							<a href=""><div class="facebook icon"><i class="fa fa-facebook" aria-hidden="true"></i></div></a>
+							<a href="https://twitter.com/uni_share" target="blank"><div class="twitter icon"><i class="fa fa-twitter" aria-hidden="true"></i></div></a>
+							<a href="https://www.instagram.com/uni_share/" target="blank"><div class="instagram icon"><i class="fa fa-instagram" aria-hidden="true"></i></div></a>
+							<a href="https://www.facebook.com/UniShare/?fref=ts" target="blank"><div class="facebook icon"><i class="fa fa-facebook" aria-hidden="true"></i></div></a>
 						</div>
 						<p id="copy"><small>copyright <span id="c">©</span> Uni-Share. All rights reserved. website by Chihiro Noguchi</small></p>
 					</div>
 				</footer>
 			</div>
-			
-			<div class="loop">
-				<div class="l-bar" id="l-btn">◁</div>
-				<div class="r-bar" id="r-btn">▷</div>
-			</div>
+
 
 			<main id="main">
+				<div class="l-bar" id="l-btn">◁</div>
+				<div class="r-bar" id="r-btn">▷</div>
 				<div class="top slides" id="top">
 					<div class="title-text">
-						<h1>For Youth , From Youth</h1>
-						<h2>未知の仕組みを発見し、<br>
-							ビジネスを発明することで<br>
-							「新しい価値」をつくり続ける。<br>
-							『MERY』は序章にすぎない。<br>
+						<h1>For youth , From youth</h1>
+						<h2>若者達から、若者達へ。<br>
+							ここではWEB特別企画として <br>
+							EYESCREM元編集長 稲田浩と<br>
+							スタイリスト服部昌孝を特集する。<br>
+							大人達から若者達へ。
 						</h2>
 					</div>
 				</div>
 				<div class="eye slides" id="second">
 					<div class="sub-text eye-text">
-						<h1>元編集長！</h1>
-						<h2><a href="#">View more</a></h2>
+						<h3>EYESCREM元編集長　<span id="name">稲田 浩</span></h3>
+						<h4><a href="article2.html">View more</a></h4>
 						<p>昼はセキュリティー企業でエンジニアとして働く一方、夜はオンラインで犯罪行為に手を染める人々を懲らしめて過ごす天才ハッカー・エリオットは、ひょんなことから世界を牛耳る巨大テック企業「E・コープ」を破壊するための大掛かりな陰謀を手伝うことになる……ウェブ世界の暗黒面から現代社会の病理を鋭くえぐり取った戦慄のドラマ「MR.ROBOT / ミスター・ロボット」。海外ドラマ専門チャンネルAXNでの放送開始（第1話は無料放送！）に寄せて、デザインシンカー池田純一が、その魅力を明かす。</p>
 					</div>
 				</div>
 				<div class="stylist slides" id="third">
 					<div class="sub-text eye-text">
-						<h1>元編集長！</h1>
-						<h2><a href="#">View more</a></h2>
+						<h3>STYLIST</h3>
+						<h4><a href="article.html">View more</a></h4>
 						<p>昼はセキュリティー企業でエンジニアとして働く一方、夜はオンラインで犯罪行為に手を染める人々を懲らしめて過ごす天才ハッカー・エリオットは、ひょんなことから世界を牛耳る巨大テック企業「E・コープ」を破壊するための大掛かりな陰謀を手伝うことになる……ウェブ世界の暗黒面から現代社会の病理を鋭くえぐり取った戦慄のドラマ「MR.ROBOT / ミスター・ロボット」。海外ドラマ専門チャンネルAXNでの放送開始（第1話は無料放送！）に寄せて、デザインシンカー池田純一が、その魅力を明かす。</p>
 					</div>
 				</div>
-				<div class="dareka slides" id="fourth">
+				<!-- <div class="dareka slides" id="fourth">
 					<div class="sub-text eye-text">
 						<h1>元編集長！</h1>
 						<h2><a href="#">View more</a></h2>
 						<p>昼はセキュリティー企業でエンジニアとして働く一方、夜はオンラインで犯罪行為に手を染める人々を懲らしめて過ごす天才ハッカー・エリオットは、ひょんなことから世界を牛耳る巨大テック企業「E・コープ」を破壊するための大掛かりな陰謀を手伝うことになる……ウェブ世界の暗黒面から現代社会の病理を鋭くえぐり取った戦慄のドラマ「MR.ROBOT / ミスター・ロボット」。海外ドラマ専門チャンネルAXNでの放送開始（第1話は無料放送！）に寄せて、デザインシンカー池田純一が、その魅力を明かす。</p>
 					</div>
-				</div>
+				</div> -->
 			</main>
 		</div><!-- /wrapper -->
 	</body>
