--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
 					</ul>
 				</nav>
 				<div class="main-visual">
-					<img src="img/main_hero.JPG">
+					<img src="img/main_hero.JPG" id="hero1" class="mains">
+					<img src="img/main_hero2.jpg" id="hero2" class="mains">
+					<img src="img/main_hero3.JPG" id="hero3" class="mains">
 				</div>
 			</header><!-- /header -->
 
@@ -98,7 +100,10 @@
 
 							　インタビュー企画では、ゲーマールックで注目を浴びた「ケイスケヨシダ（KEISUKEYOSHIDA）」やDHLデザイナーアワードを受賞した「プラスチックトーキョー（PLASTICTOKYO）」など、ファッション不況の昨今を覆すファッションブランドを大特集。<br><br>
 							　さらに、「Fashionsnap.com」社長 光山玲央奈らメディアを創る人々に、氾濫する情報との付き合い方を伺ったほか、「N magazine」編集長 島崎賢史郎など、現状に満足せず猛進する若者にフィーチャー。
-							　また路上生活者によるストリートスナップなど、多方面の声に耳を傾け、読者に活気を与える1冊となっている。</p>
+							　また路上生活者によるストリートスナップなど、多方面の声に耳を傾け、読者に活気を与える1冊となっている。<br><br><br>
+							出演 :
+							<span id="person">相川龍之(スタイリスト)、池谷陸(comme je suis)、井端珠里(女優)、今崎契助(PLASTICTOKYO)、岩野一真(droptokyoディレクター)、上村銀次郎(スナップカメラマン)、潮みか(女優)、うちだゆうほ(モデル)、榎戸悠乃(ヘアメイク)、小野寺亮(写真家/映画監督)、川原林尚子(イセタンガールSM)、川林真人(STUDIOUS USED)、木竜麻生(女優)、小林健二(青山学院大学講師)、小見山峻(写真家)、島崎賢史郎(N magazine編集長)、嶌村吉祥丸(写真家)、タカダヒカル(ヘアメイク)、玉田翔太(TTT_MSW)、辻優史(照明)、豊田陽介(ヘアメイク)、二宮ちえ(スタイリスト)、福士リナ(モデル)、松田稜平(スタイリスト)、光山玲央奈(Fashionsnap.com社長)、向千鶴(WWDjapan編集長)、森優作(俳優)、柳澤宜典(モデル)、山崎良太(アンチ)、山本春花(写真家)、吉田圭佑(KEISUKEYOSHIDA)、ヨルコバンザイ(BANZAI)</span>
+						</p>
 					<img src="./img/main_content.png" alt="" class="con-img">
 					<h4>LIVE YOUR LIFE SIMPLY</h4>
 					<img src="./img/main_keisuke.png" alt="" class="con-img">
@@ -113,8 +118,8 @@
 					<div class="container2">
 						<h3>WEB CONTENTS</h3>
 						<a href="for_youth.html"><div class="webmaga"><img src="img/main_tile.png" alt=""></div></a>
-						<a href="enjinai.html"><div class="webmaga"><img src="img/main_tile2.png"></div></a>
-						<a href="the_home.html"><div class="webmaga"><img src="img/main_tile3.png"></div></a>
+						<a href="enjinai.html"><div class="webmaga"><img src="img/main_tile3.png"></div></a>
+						<a href="the_home.html"><div class="webmaga"><img src="img/main_tile2.png"></div></a>
 						<a href="#"><div class="webmaga"><img src="img/main_tile4.png"></div></a>
 					</div>
 				</div>
@@ -187,8 +192,8 @@
 					<h2 id="cont"></h2>
 					<div class="container">
 						<h3>CONTACT</h3>
-						<a href="" class="mail">Uni-Shareへのお問い合わせはこちら</a><br>
-						<a href="" class="mail">Uni-Shareのお取り寄せはこちら</a>
+						<a href="mailto:unishare.info4@gmail.com" class="mail">Uni-Shareへのお問い合わせはこちら</a><br>
+						<a href="https://unishare.thebase.in/" class="mail">Uni-Shareのお取り寄せはこちら</a>
 					</div>
 				</div>
 			</main>
@@ -198,9 +203,9 @@
 					<h4><a href="#" data-scroll>TOP</a></h4>
 					<div class="sns">
 						<p>follow <br> Uni-Share</p>
-						<a href=""><div class="twitter icon"><i class="fa fa-twitter" aria-hidden="true"></i></div></a>
-						<a href=""><div class="instagram icon"><i class="fa fa-instagram" aria-hidden="true"></i></div></a>
-						<a href=""><div class="facebook icon"><i class="fa fa-facebook" aria-hidden="true"></i></div></a>
+						<a href="https://twitter.com/uni_share" target="blank"><div class="twitter icon"><i class="fa fa-twitter" aria-hidden="true"></i></div></a>
+							<a href="https://www.instagram.com/uni_share/" target="blank"><div class="instagram icon"><i class="fa fa-instagram" aria-hidden="true"></i></div></a>
+							<a href="https://www.facebook.com/UniShare/?fref=ts" target="blank"><div class="facebook icon"><i class="fa fa-facebook" aria-hidden="true"></i></div></a>
 					</div>
 
 					<p><br><small>copyright <span id="c">©</span>Uni-Share. All rights reserved. website by Chihiro Noguchi</small></p>
